samples/_failures_safe/1761366990_0f89b1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_88696290.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_88696290.c:167:16: error: used struct type value where scalar is required
  167 |     } else if (parser->current_token
      |                ^~~~~~
./samples/SAFE/__tmp_88696290.c:167:37: error: expected ‘)’ at end of input
  167 |     } else if (parser->current_token
      |               ~                     ^
      |                                     )
./samples/SAFE/__tmp_88696290.c:167:5: error: expected declaration or statement at end of input
  167 |     } else if (parser->current_token
      |     ^
